--- a/urbanstory/pages/cards/card.html
+++ b/urbanstory/pages/cards/card.html
@@ -14,19 +14,6 @@
 				<div class="card depth-2 card-base">Card depth-2</div>
 			</div>
 		</div>
-		<pre><code>&lt;div class=&quot;row&quot;&gt;
-    &lt;div class=&quot;col-xs-4&quot;&gt;
-        &lt;div class=&quot;card card-base&quot;&gt;Card (default)&lt;/div&gt;
-    &lt;/div&gt;
-
-    &lt;div class=&quot;col-xs-4&quot;&gt;
-        &lt;div class=&quot;card depth-1 card-base&quot;&gt;Card depth-1&lt;/div&gt;
-    &lt;/div&gt;
-
-    &lt;div class=&quot;col-xs-4&quot;&gt;
-        &lt;div class=&quot;card depth-2 card-base&quot;&gt;Card depth-2&lt;/div&gt;
-    &lt;/div&gt;
-&lt;/div&gt;</code></pre>
 	</section>
 	<section>
 		<h4>CSS class options</h4>
@@ -54,5 +41,39 @@
 				</tr>
 			</tbody>
 		</table>
+	</section>
+	<section class="code-preview">
+		<div class="card uh-tab">
+			<nav class="uh-tab-nav">
+				<a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+				<a  class="nav-item nav-fit-content" href="#sass" id="sass-tab">SASS</a>
+			</nav>
+		</div>
+		<pre  class="code-snippet display-on" id="html"><code>&lt;div class=&quot;row&quot;&gt;
+	&lt;div class=&quot;col-xs-4&quot;&gt;
+		&lt;div class=&quot;card card-base&quot;&gt;Card (default)&lt;/div&gt;
+	&lt;/div&gt;
+
+	&lt;div class=&quot;col-xs-4&quot;&gt;
+		&lt;div class=&quot;card depth-1 card-base&quot;&gt;Card depth-1&lt;/div&gt;
+	&lt;/div&gt;
+
+	&lt;div class=&quot;col-xs-4&quot;&gt;
+		&lt;div class=&quot;card depth-2 card-base&quot;&gt;Card depth-2&lt;/div&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+		<pre class="code-snippet" id="sass"><code>
+.card {
+	background: #ffffff;
+	@include radius;
+	@include box - shadow(0 0 0 1 px rgba(black, 0.09));
+	& .depth - 1 {
+		@include box - shadow( 0 0 0 1 px rgba(black, 0.09), 0 4 px 8 px rgba(black, 0.1));
+	}
+	& .depth - 2 {
+		@include box - shadow( 0 0 0 1 px rgba(black, 0.09), 0 8 px 16 px rgba(black, 0.1));
+	}
+}
+		</code></pre>
 	</section>
 </div>
