--- a/urbanstory/pages/forms/checkbox.html
+++ b/urbanstory/pages/forms/checkbox.html
@@ -32,8 +32,15 @@
 				<input type="checkbox" name="" disabled="">
 				<span class="checkmark"></span>
 			</label>
-		</div>
-		<pre><code>&lt;div class=&quot;uh-input&quot;&gt;
+        </div>
+        <section class="code-preview">
+            <div class="card uh-tab">
+                <nav class="uh-tab-nav">
+                    <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+                    <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+                </nav>
+            </div>
+		    <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;uh-input&quot;&gt;
     &lt;label class=&quot;container-checkbox&quot;&gt;
         Urbanhire
         &lt;input type=&quot;checkbox&quot; name=&quot;&quot;&gt;
@@ -61,6 +68,122 @@
         &lt;span class=&quot;checkmark&quot;&gt;&lt;/span&gt;
     &lt;/label&gt;
 &lt;/div&gt;</code></pre>
+            <pre class="code-snippet" id="sass-1"><code>.uh-input {
+        margin: $gutter-l 0px;
+        input {
+            padding: 12px 20px;
+            width: 100%;
+            border: 1px solid #ccc;
+        }
+        /* Customize the label (the container) */
+        .container {
+            &amp;-checkbox {
+                display: block;
+                position: relative;
+                padding-left: $gutter-l + 10;
+                margin-bottom: 10px;
+                cursor: pointer;
+                // @include user-select(none);
+                /* Hide the browser's default checkbox */
+                input {
+                    position: absolute;
+                    opacity: 0;
+                    cursor: pointer;
+                    height: 0;
+                    width: 0;
+                    /* Show the checkmark when checked */
+                    &amp;:checked ~ .checkmark:after {
+                        display: block;
+                    }
+                    /* When the checkbox is checked, add a blue background */
+                    &amp;:checked ~ .checkmark {
+                        background-color: $c-firm-1;
+                    }
+                }
+                /* Create a custom checkbox */
+                .checkmark {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: $gutter-l + 2;
+                    width: $gutter-l + 2;
+                    background-color: $c-white;
+                    border: 2px solid rgba(black, .35);
+                    @include border-radius(2px);
+                    /* Create the checkmark/indicator (hidden when not checked) */
+                    &amp;:after {
+                        content: &quot;&quot;;
+                        position: absolute;
+                        display: none;
+                    }
+                    /* Style the checkmark/indicator */
+                    &amp;:after {
+                        left: 5px;
+                        top: 1px;
+                        width: 5px;
+                        height: 10px;
+                        border: solid white;
+                        border-width: 0 2px 2px 0;
+                        @include transform (rotate(45deg));
+                    }
+                }
+            }
+            /* Customize the label (the container) */
+            &amp;-radio {
+                display: block;
+                position: relative;
+                padding-left: $gutter-l + 10;
+                margin-bottom: 12px;
+                cursor: pointer;
+                // @include user-select(none);
+                /* Hide the browser's default radio button */
+                input {
+                    position: absolute;
+                    opacity: 0;
+                    cursor: pointer;
+                    height: 0;
+                    width: 0;
+                    /* When the radio button is checked, add a blue background */
+                    &amp;:checked ~ .checkmark {
+                        background-color: $c-firm-1;
+                    }
+                    /* Show the indicator (dot/circle) when checked */
+                    &amp;:checked ~ .checkmark:after {
+                        display: block;
+                    }
+                }
+                /* Create a custom radio button */
+                .checkmark {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: $gutter-l + 2;
+                    width: $gutter-l + 2;
+                    background-color: $c-white;
+                    border: 2px solid rgba(black, .35);
+                    @include border-radius(50%);
+                    /* Create the indicator (the dot/circle - hidden when not checked) */
+                    &amp;:after {
+                        content: &quot;&quot;;
+                        position: absolute;
+                        display: none;
+                    }
+                    /* Style the indicator (dot/circle) */
+                    &amp;:after {
+                        left: 5px;
+                        top: 1px;
+                        width: 5px;
+                        height: 10px;
+                        border: solid white;
+                        border-width: 0 2px 2px 0;
+                        @include transform (rotate(45deg));
+                    }
+                }
+            }
+        }
+    }
+    </code></pre>
+        </section>
 	</section>
 	<section>
 		<h4>Radio</h4>
@@ -84,8 +207,15 @@
 				<input type="radio" name="" disabled="">
 				<span class="checkmark"></span>
 			</label>
-		</div>
-		<pre><code>&lt;div class=&quot;uh-input&quot;&gt;
+        </div>
+        <section class="code-preview">
+            <div class="card uh-tab">
+                <nav class="uh-tab-nav">
+                    <a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
+                    <a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
+                </nav>
+            </div>
+		    <pre class="code-snippet display-on" id="html-2"><code>&lt;div class=&quot;uh-input&quot;&gt;
     &lt;label class=&quot;container-radio&quot;&gt;
         Urbanhire
         &lt;input type=&quot;radio&quot; name=&quot;&quot;&gt;
@@ -106,10 +236,7 @@
         &lt;span class=&quot;checkmark&quot;&gt;&lt;/span&gt;
     &lt;/label&gt;
 &lt;/div&gt;</code></pre>
-	</section>
-	<section>
-		<h4>SASS</h4>
-		<pre><code>.uh-input {
+		    <pre class="code-snippet" id="sass-2"><code>.uh-input {
     margin: $gutter-l 0px;
     input {
         padding: 12px 20px;
@@ -223,6 +350,7 @@
         }
     }
 }
-</code></pre>
+            </code></pre>
+        </section>
 	</section>
 </div>
