--- a/urbanstory/pages/forms/select.html
+++ b/urbanstory/pages/forms/select.html
@@ -13,7 +13,14 @@
 				<option>Option 5</option>
 			</select>
 		</div>
-		<pre><code>&lt;div class=&quot;input-form&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;input-form&quot;&gt;
     &lt;select&gt;
         &lt;option&gt;Option 1&lt;/option&gt;
         &lt;option&gt;Option 2&lt;/option&gt;
@@ -22,6 +29,138 @@
         &lt;option&gt;Option 5&lt;/option&gt;
     &lt;/select&gt;
 &lt;/div&gt;</code></pre>
+			<pre class="code-snippet" id="sass-1"><code>
+// forms
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="search"],
+select {
+	@extend .transition;
+	outline: none;
+	border: solid 1px $c-grey-3;
+	line-height: 40px;
+	font-size: 14px;
+	padding: 0 $gutter-m;
+	// background:;
+	@include radius;
+	&:focus {
+		@include box-shadow(0 0 0 3px rgba(black, 0.15));
+	}
+	&[disabled] {
+		border: solid 1px $c-grey-2;
+		cursor: not-allowed;
+	}
+}
+
+select {
+	height: 40px;
+	width: 100%;
+	background: white;
+}
+
+.input-form {
+	label:first-of-type {
+		display: block;
+		font-size: (14/16) + rem;
+		margin-bottom: $gutter-m;
+		margin-top: $gutter-l;
+	}
+	&.width-auto {
+		textarea,
+		input,
+		select {
+			width: auto;
+		}
+	}
+	textarea {
+		resize: vertical;
+		overflow: auto;
+		line-height: 1rem;
+		padding: $gutter-m;
+		min-height: 64px;
+	}
+	textarea,
+	input,
+	select {
+		width: 100%;
+		&+label {
+			display: block;
+			color: $c-grey-4;
+			font-size: (12/16) + rem;
+			margin-top: $gutter-s;
+		}
+	}
+	&.is-danger {
+		label {
+			color: $c-red-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-red-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-red-1, 0.15));
+			}
+		}
+	}
+	&.is-warning {
+		label {
+			color: $c-yellow-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-yellow-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-yellow-1, 0.15));
+			}
+		}
+	}
+	&.is-success {
+		label {
+			color: $c-green-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-green-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-green-1, 0.15));
+			}
+		}
+	}
+	&.is-info {
+		label {
+			color: $c-median-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-median-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-median-1, 0.15));
+			}
+		}
+	}
+}
+
+// checkbox & radio
+			</code></pre>
+		</section>
 	</section>
 	<section>
 		<h4>Auto Witdh <code>.auto-width</code></h4>
@@ -34,7 +173,14 @@
 				<option>Option 5</option>
 			</select>
 		</div>
-		<pre><code>&lt;div class=&quot;input-form width-auto&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-2"><code>&lt;div class=&quot;input-form width-auto&quot;&gt;
     &lt;select&gt;
         &lt;option&gt;Option 1&lt;/option&gt;
         &lt;option&gt;Option 2&lt;/option&gt;
@@ -43,6 +189,138 @@
         &lt;option&gt;Option 5&lt;/option&gt;
     &lt;/select&gt;
 &lt;/div&gt;</code></pre>
+			<pre class="code-snippet" id="sass-2"><code>
+// forms
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="search"],
+select {
+	@extend .transition;
+	outline: none;
+	border: solid 1px $c-grey-3;
+	line-height: 40px;
+	font-size: 14px;
+	padding: 0 $gutter-m;
+	// background:;
+	@include radius;
+	&:focus {
+		@include box-shadow(0 0 0 3px rgba(black, 0.15));
+	}
+	&[disabled] {
+		border: solid 1px $c-grey-2;
+		cursor: not-allowed;
+	}
+}
+
+select {
+	height: 40px;
+	width: 100%;
+	background: white;
+}
+
+.input-form {
+	label:first-of-type {
+		display: block;
+		font-size: (14/16) + rem;
+		margin-bottom: $gutter-m;
+		margin-top: $gutter-l;
+	}
+	&.width-auto {
+		textarea,
+		input,
+		select {
+			width: auto;
+		}
+	}
+	textarea {
+		resize: vertical;
+		overflow: auto;
+		line-height: 1rem;
+		padding: $gutter-m;
+		min-height: 64px;
+	}
+	textarea,
+	input,
+	select {
+		width: 100%;
+		&+label {
+			display: block;
+			color: $c-grey-4;
+			font-size: (12/16) + rem;
+			margin-top: $gutter-s;
+		}
+	}
+	&.is-danger {
+		label {
+			color: $c-red-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-red-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-red-1, 0.15));
+			}
+		}
+	}
+	&.is-warning {
+		label {
+			color: $c-yellow-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-yellow-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-yellow-1, 0.15));
+			}
+		}
+	}
+	&.is-success {
+		label {
+			color: $c-green-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-green-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-green-1, 0.15));
+			}
+		}
+	}
+	&.is-info {
+		label {
+			color: $c-median-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-median-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-median-1, 0.15));
+			}
+		}
+	}
+}
+
+// checkbox & radio
+			</code></pre>
+		</section>
 	</section>
 	<section>
 		<h4>Select <code>:disabled</code></h4>
@@ -55,7 +333,14 @@
 				<option>Option 5</option>
 			</select>
 		</div>
-		<pre><code>&lt;div class=&quot;input-form&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-3" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-3" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-3"><code>&lt;div class=&quot;input-form&quot;&gt;
     &lt;select disabled&gt;
         &lt;option&gt;Option 1&lt;/option&gt;
         &lt;option&gt;Option 2&lt;/option&gt;
@@ -64,6 +349,138 @@
         &lt;option&gt;Option 5&lt;/option&gt;
     &lt;/select&gt;
 &lt;/div&gt;</code></pre>
+			<pre class="code-snippet" id="sass-3"><code>
+		// forms
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"],
+		select {
+			@extend .transition;
+			outline: none;
+			border: solid 1px $c-grey-3;
+			line-height: 40px;
+			font-size: 14px;
+			padding: 0 $gutter-m;
+			// background:;
+			@include radius;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba(black, 0.15));
+			}
+			&[disabled] {
+				border: solid 1px $c-grey-2;
+				cursor: not-allowed;
+			}
+		}
+		
+		select {
+			height: 40px;
+			width: 100%;
+			background: white;
+		}
+		
+		.input-form {
+			label:first-of-type {
+				display: block;
+				font-size: (14/16) + rem;
+				margin-bottom: $gutter-m;
+				margin-top: $gutter-l;
+			}
+			&.width-auto {
+				textarea,
+				input,
+				select {
+					width: auto;
+				}
+			}
+			textarea {
+				resize: vertical;
+				overflow: auto;
+				line-height: 1rem;
+				padding: $gutter-m;
+				min-height: 64px;
+			}
+			textarea,
+			input,
+			select {
+				width: 100%;
+				&+label {
+					display: block;
+					color: $c-grey-4;
+					font-size: (12/16) + rem;
+					margin-top: $gutter-s;
+				}
+			}
+			&.is-danger {
+				label {
+					color: $c-red-1;
+				}
+				select,
+				textarea,
+				input[type="text"],
+				input[type="password"],
+				input[type="email"],
+				input[type="search"] {
+					border: solid 1px $c-red-1;
+					&:focus {
+						@include box-shadow(0 0 0 3px rgba($c-red-1, 0.15));
+					}
+				}
+			}
+			&.is-warning {
+				label {
+					color: $c-yellow-1;
+				}
+				select,
+				textarea,
+				input[type="text"],
+				input[type="password"],
+				input[type="email"],
+				input[type="search"] {
+					border: solid 1px $c-yellow-1;
+					&:focus {
+						@include box-shadow(0 0 0 3px rgba($c-yellow-1, 0.15));
+					}
+				}
+			}
+			&.is-success {
+				label {
+					color: $c-green-1;
+				}
+				select,
+				textarea,
+				input[type="text"],
+				input[type="password"],
+				input[type="email"],
+				input[type="search"] {
+					border: solid 1px $c-green-1;
+					&:focus {
+						@include box-shadow(0 0 0 3px rgba($c-green-1, 0.15));
+					}
+				}
+			}
+			&.is-info {
+				label {
+					color: $c-median-1;
+				}
+				select,
+				textarea,
+				input[type="text"],
+				input[type="password"],
+				input[type="email"],
+				input[type="search"] {
+					border: solid 1px $c-median-1;
+					&:focus {
+						@include box-shadow(0 0 0 3px rgba($c-median-1, 0.15));
+					}
+				}
+			}
+		}
+		
+		// checkbox & radio
+			</code></pre>
+		</section>
 	</section>
 	<section>
 		<h4>Select with label & alert</h4>
@@ -89,7 +506,14 @@
 			</select>
 			<label>You haven't select this option</label>
 		</div>
-		<pre><code>&lt;div class=&quot;input-form&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-4" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-4" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-4"><code>&lt;div class=&quot;input-form&quot;&gt;
     &lt;label&gt;Choose selection&lt;/label&gt;
     &lt;select&gt;
         &lt;option&gt;Option 1&lt;/option&gt;
@@ -112,5 +536,137 @@
     &lt;/select&gt;
     &lt;label&gt;You haven't select this option&lt;/label&gt;
 &lt;/div&gt;</code></pre>
+			<pre class="code-snippet" id="sass-4"><code>
+// forms
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="search"],
+select {
+	@extend .transition;
+	outline: none;
+	border: solid 1px $c-grey-3;
+	line-height: 40px;
+	font-size: 14px;
+	padding: 0 $gutter-m;
+	// background:;
+	@include radius;
+	&:focus {
+		@include box-shadow(0 0 0 3px rgba(black, 0.15));
+	}
+	&[disabled] {
+		border: solid 1px $c-grey-2;
+		cursor: not-allowed;
+	}
+}
+
+select {
+	height: 40px;
+	width: 100%;
+	background: white;
+}
+
+.input-form {
+	label:first-of-type {
+		display: block;
+		font-size: (14/16) + rem;
+		margin-bottom: $gutter-m;
+		margin-top: $gutter-l;
+	}
+	&.width-auto {
+		textarea,
+		input,
+		select {
+			width: auto;
+		}
+	}
+	textarea {
+		resize: vertical;
+		overflow: auto;
+		line-height: 1rem;
+		padding: $gutter-m;
+		min-height: 64px;
+	}
+	textarea,
+	input,
+	select {
+		width: 100%;
+		&+label {
+			display: block;
+			color: $c-grey-4;
+			font-size: (12/16) + rem;
+			margin-top: $gutter-s;
+		}
+	}
+	&.is-danger {
+		label {
+			color: $c-red-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-red-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-red-1, 0.15));
+			}
+		}
+	}
+	&.is-warning {
+		label {
+			color: $c-yellow-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-yellow-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-yellow-1, 0.15));
+			}
+		}
+	}
+	&.is-success {
+		label {
+			color: $c-green-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-green-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-green-1, 0.15));
+			}
+		}
+	}
+	&.is-info {
+		label {
+			color: $c-median-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-median-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-median-1, 0.15));
+			}
+		}
+	}
+}
+
+// checkbox & radio
+			</code></pre>
+		</section>
 	</section>
 </div>
