--- a/urbanstory/pages/forms/textarea.html
+++ b/urbanstory/pages/forms/textarea.html
@@ -30,7 +30,14 @@
 			<textarea placeholder="textarea"></textarea>
 			<label>Success message</label>
 		</div>
-		<pre><code>&lt;div class=&quot;input-form width-auto&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html"><code>&lt;div class=&quot;input-form width-auto&quot;&gt;
     &lt;textarea placeholder=&quot;textarea&quot;&gt;&lt;/textarea&gt;
 &lt;/div&gt;
 
@@ -62,5 +69,137 @@
     &lt;textarea placeholder=&quot;textarea&quot;&gt;&lt;/textarea&gt;
     &lt;label&gt;Success message&lt;/label&gt;
 &lt;/div&gt;</code></pre>
+			<pre class="code-snippet" id="sass"><code>
+// forms
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="search"],
+select {
+	@extend .transition;
+	outline: none;
+	border: solid 1px $c-grey-3;
+	line-height: 40px;
+	font-size: 14px;
+	padding: 0 $gutter-m;
+	// background:;
+	@include radius;
+	&:focus {
+		@include box-shadow(0 0 0 3px rgba(black, 0.15));
+	}
+	&[disabled] {
+		border: solid 1px $c-grey-2;
+		cursor: not-allowed;
+	}
+}
+
+select {
+	height: 40px;
+	width: 100%;
+	background: white;
+}
+
+.input-form {
+	label:first-of-type {
+		display: block;
+		font-size: (14/16) + rem;
+		margin-bottom: $gutter-m;
+		margin-top: $gutter-l;
+	}
+	&.width-auto {
+		textarea,
+		input,
+		select {
+			width: auto;
+		}
+	}
+	textarea {
+		resize: vertical;
+		overflow: auto;
+		line-height: 1rem;
+		padding: $gutter-m;
+		min-height: 64px;
+	}
+	textarea,
+	input,
+	select {
+		width: 100%;
+		&+label {
+			display: block;
+			color: $c-grey-4;
+			font-size: (12/16) + rem;
+			margin-top: $gutter-s;
+		}
+	}
+	&.is-danger {
+		label {
+			color: $c-red-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-red-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-red-1, 0.15));
+			}
+		}
+	}
+	&.is-warning {
+		label {
+			color: $c-yellow-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-yellow-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-yellow-1, 0.15));
+			}
+		}
+	}
+	&.is-success {
+		label {
+			color: $c-green-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-green-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-green-1, 0.15));
+			}
+		}
+	}
+	&.is-info {
+		label {
+			color: $c-median-1;
+		}
+		select,
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		input[type="search"] {
+			border: solid 1px $c-median-1;
+			&:focus {
+				@include box-shadow(0 0 0 3px rgba($c-median-1, 0.15));
+			}
+		}
+	}
+}
+
+// checkbox & radio
+			</code></pre>
+		</section>
 	</section>
 </div>
