--- a/urbanstory/pages/collaterals/ats.html
+++ b/urbanstory/pages/collaterals/ats.html
@@ -55,4 +55,10 @@
             <figcaption>Resume Search</figcaption> 
 		</figure>
     </section>
+    <section>
+        <figure class="uh-img-showcase">
+            <img src="../../src/img/ats/pro-menu-settings.png">
+            <figcaption>Menu Settings Drawer</figcaption> 
+		</figure>
+    </section>
 </div>
