fixing call toast button, adding switch component

--- a/urbanstory/pages/grid/grid.html
+++ b/urbanstory/pages/grid/grid.html
@@ -39,11 +39,10 @@
     <section class="code-preview">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
-					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
-					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+					<a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
 				</nav>
 			</div>
-            <pre class="code-snippet display-on" id="html-1"><code>&lt;div class="row">
+            <pre class="code-snippet display-on" id="html"><code>&lt;div class="row">
     &lt;div class="col-xs-12
                 col-sm-8
                 col-md-6
@@ -110,17 +109,35 @@
         <div class="col-xs-6">
             <div class="box-row"></div>
         </div>
-    </div><pre><code>.col-xs-6 {
+    </div>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html"><code>.col-xs-6 {
   flex-basis: 50%;
-}</code></pre></section>
+}       </code></pre>
+    </section>
+</section>
 <a name="syntax"></a>
 <section class="page-section">
     <h2>Simple Syntax</h2>
-    <p>All you need to remember is row, column, content.</p><pre><code>&lt;div class="row">
+    <p>All you need to remember is row, column, content.</p>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html"><code>&lt;div class="row">
     &lt;div class="col-xs-12">
         &lt;div class="box">12&lt;/div>
     &lt;/div>
-&lt;/div></code></pre></section>
+&lt;/div></code></pre>
+    </section>
+</section>
 <a name="offsets"></a>
 <section class="page-section">
     <h2>Offsets</h2>
@@ -179,11 +196,20 @@
         <div class="col-xs-offset-1 col-xs-11">
             <div class="box-row"></div>
         </div>
-    </div><pre><code>&lt;div class="row">
+    </div>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html"><code>&lt;div class="row">
     &lt;div class="col-xs-offset-3 col-xs-9">
         &lt;div class="box">offset&lt;/div>
     &lt;/div>
-&lt;/div></code></pre></section>
+&lt;/div></code></pre>
+    </section>
+</section>
 <a name="auto"></a>
 <section class="page-section">
     <h2>Auto Width</h2>
@@ -206,11 +232,20 @@
         <div class="col-xs">
             <div class="box-row"></div>
         </div>
-    </div><pre><code>&lt;div class="row">
+    </div>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html"><code>&lt;div class="row">
     &lt;div class="col-xs">
         &lt;div class="box">auto&lt;/div>
     &lt;/div>
-&lt;/div></code></pre></section>
+&lt;/div></code></pre>
+    </section>
+</section>
 <a name="nested"></a>
 <section class="page-section">
     <h2>Nested Grids</h2>
@@ -261,7 +296,14 @@
                 </div>
             </div>
         </div>
-    </div><pre><code>&lt;div class="row">
+    </div>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html"><code>&lt;div class="row">
     &lt;div class="col-xs">
         &lt;div class="box">
             &lt;div class="row">
@@ -271,7 +313,9 @@
             &lt;/div>
         &lt;/div>
     &lt;/div>
-&lt;/div></code></pre></section>
+&lt;/div></code></pre>
+    </section>
+</section>
 <a name="alignment"></a>
 <section class="page-section">
     <h2>Alignment</h2>
@@ -287,7 +331,7 @@
                 </div>
             </div>
         </div>
-    </div><pre><code>&lt;div class="row start-xs">
+    </div><pre class="code-snippet display-on" id="html"><code>&lt;div class="row start-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             start
@@ -306,7 +350,7 @@
                 </div>
             </div>
         </div>
-    </div><pre><code>&lt;div class="row center-xs">
+    </div><pre class="code-snippet display-on" id="html"><code>&lt;div class="row center-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             start
@@ -325,7 +369,7 @@
                 </div>
             </div>
         </div>
-    </div><pre><code>&lt;div class="row end-xs">
+    </div><pre class="code-snippet display-on" id="html"><code>&lt;div class="row end-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             end
@@ -344,14 +388,22 @@
                 </div>
             </div>
         </div>
-    </div>Example<pre><code>&lt;div class="row center-xs end-sm start-lg">
+    </div>Example
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html"><code>&lt;div class="row center-xs end-sm start-lg">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             All together now
         &lt;/div>
     &lt;/div>
 &lt;/div>
-</code></pre>
+        </code></pre>
+    </section>
     <h4><code>.top-</code></h4>
     <div class="row top-xs">
         <div class="col-xs-6">
@@ -360,14 +412,30 @@
         <div class="col-xs-6">
             <div class="box"></div>
         </div>
-    </div><pre><code>&lt;div class="row top-xs">
+    </div>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html-0" id="html-tab">HTML</a>
+                <a  class="nav-item nav-fit-content" href="#sass-0" id="sass-tab">SASS</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html-0"><code>&lt;div class="row top-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             top
         &lt;/div>
     &lt;/div>
 &lt;/div>
-</code></pre>
+        </code></pre>
+        <pre class="code-snippet" id="sass-0"><code>
+.top-xs {
+    -ms-flex-align: start;
+    -webkit-box-align: start;
+    align-items: flex-start;
+}
+        </code></pre>
+    </section>
     <h4><code>.middle-</code></h4>
     <div class="row middle-xs">
         <div class="col-xs-6">
@@ -376,14 +444,30 @@
         <div class="col-xs-6">
             <div class="box"></div>
         </div>
-    </div><pre><code>&lt;div class="row middle-xs">
+    </div>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+                <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html-1"><code>&lt;div class="row middle-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             center
         &lt;/div>
     &lt;/div>
 &lt;/div>
-</code></pre>
+        </code></pre>
+        <pre class="code-snippet" id="sass-1"><code>
+.middle-xs {
+    -ms-flex-align: center;
+    -webkit-box-align: center;
+    align-items: center;
+}
+        </code></pre>
+    </section>
     <h4><code>.bottom-</code></h4>
     <div class="row bottom-xs">
         <div class="col-xs-6">
@@ -392,14 +476,31 @@
         <div class="col-xs-6">
             <div class="box"></div>
         </div>
-    </div><pre><code>&lt;div class="row bottom-xs">
+    </div>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
+                <a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html-2"><code>&lt;div class="row bottom-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             bottom
         &lt;/div>
     &lt;/div>
 &lt;/div>
-</code></pre></section>
+        </code></pre>
+        <pre class="code-snippet" id="sass-2"><code>
+.bottom-xs {
+    -ms-flex-align: end;
+    -webkit-box-align: end;
+    align-items: flex-end;
+}
+        </code></pre>
+    </section>
+</section>
 <a name="distribution"></a>
 <section class="page-section">
     <h2>Distribution</h2>
@@ -668,29 +769,20 @@
                 <a  class="nav-item nav-fit-content" href="#sass-7" id="sass-tab">SASS</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html-7"><code>&lt;div class=&quot;row&quot;&gt;
-    &lt;div class=&quot;col-xs-12&quot;&gt;
-        &lt;div class=&quot;box box-container&quot;&gt;
-            &lt;div class=&quot;row reverse&quot;&gt;
-                &lt;div class=&quot;col-xs-2&quot;&gt;
-                    &lt;div class=&quot;box-nested&quot;&gt;1&lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;col-xs-2&quot;&gt;
-                    &lt;div class=&quot;box-nested&quot;&gt;2&lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;col-xs-2&quot;&gt;
-                    &lt;div class=&quot;box-nested&quot;&gt;3&lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;col-xs-2&quot;&gt;
-                    &lt;div class=&quot;box-nested&quot;&gt;4&lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;col-xs-2&quot;&gt;
-                    &lt;div class=&quot;box-nested&quot;&gt;5&lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;col-xs-2&quot;&gt;
-                    &lt;div class=&quot;box-nested&quot;&gt;6&lt;/div&gt;
-                &lt;/div&gt;
-            &lt;/div&gt;
+        <pre class="code-snippet display-on" id="html-7"><code>&lt;div class=&quot;row reverse&quot;&gt;
+    &lt;div class=&quot;col-xs-2&quot;&gt;
+        &lt;div class=&quot;box&quot;&gt;
+            1
+        &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;col-xs-2&quot;&gt;
+        &lt;div class=&quot;box&quot;&gt;
+            2
+        &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;col-xs-2&quot;&gt;
+        &lt;div class=&quot;box&quot;&gt;
+            3
         &lt;/div&gt;
     &lt;/div&gt;
 &lt;/div&gt;
