--- a/iframe.html
+++ b/iframe.html
@@ -162,9 +162,10 @@
         #d6d6d6 ${upperValue}%,
         #d6d6d6 100%`;
     }</script><script>function copyToClipboard(element) {
-        var $temp = $("<input>");
+        var $temp = $("<textarea>");
+        var brRegex = /\r?\n\s*[\/]?>/gi;
         $("body").append($temp);
-        $temp.val($(element).html()).select();
+        $temp.val($(element).html().replace(brRegex, "<br />")).select();
         document.execCommand("copy");
         $temp.remove();
-   }</script></head><body><div class="sb-nopreview sb-wrapper"><div class="sb-nopreview_main"><h1 class="sb-nopreview_heading sb-heading">No Preview</h1><p>Sorry, but you either have no stories or none are selected somehow.</p><ul><li>Please check the Storybook config.</li><li>Try reloading the page.</li></ul><p>If the problem persists, check the browser console, or the terminal you've run Storybook from.</p></div></div><div class="sb-errordisplay sb-wrapper"><div id="error-message" class="sb-heading"></div><pre class="sb-errordisplay_code"><code id="error-stack"></code></pre></div><div id="root"></div><script src="runtime~main.e1ef40596aa4ab0ca39a.bundle.js"></script><script src="vendors~main.e1ef40596aa4ab0ca39a.bundle.js"></script><script src="main.e1ef40596aa4ab0ca39a.bundle.js"></script></body></html>
+  }</script></head><body><div class="sb-nopreview sb-wrapper"><div class="sb-nopreview_main"><h1 class="sb-nopreview_heading sb-heading">No Preview</h1><p>Sorry, but you either have no stories or none are selected somehow.</p><ul><li>Please check the Storybook config.</li><li>Try reloading the page.</li></ul><p>If the problem persists, check the browser console, or the terminal you've run Storybook from.</p></div></div><div class="sb-errordisplay sb-wrapper"><div id="error-message" class="sb-heading"></div><pre class="sb-errordisplay_code"><code id="error-stack"></code></pre></div><div id="root"></div><script src="runtime~main.60b474d35c131e1cebfa.bundle.js"></script><script src="vendors~main.60b474d35c131e1cebfa.bundle.js"></script><script src="main.60b474d35c131e1cebfa.bundle.js"></script></body></html>
